fix fields in audio and audioDto